[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "pyadc"
version = "0.1.0"
description = "Python library for the Alarm.com API"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
keywords = ["alarm.com", "home-automation", "security"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "aiohttp>=3.9",
    "beautifulsoup4>=4.12",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "aioresponses>=0.7",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["pyadc*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
