[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "pyadc"
version = "1.1.1"
description = "Python library for the Alarm.com API"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
keywords = ["alarm.com", "home-automation", "security"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "aiohttp>=3.9",
]

[project.optional-dependencies]
# WebRTC camera streaming (Janus bridge) is an opt-in extra. aiortc pulls in
# PyAV, which pins ``av<17.0``; Home Assistant 2025.x ships ``av==17.x``, so a
# hard dependency here makes the whole integration unresolvable. Everything
# except live camera video works without it — see pyadc/janus.py.
webrtc = [
    "aiortc>=1.6.0",
]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "aioresponses>=0.7",
    "aiortc>=1.6.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["pyadc*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
